@@ -190,13 +190,12 @@ if (isset($plugin_list)) {
                         $schema_insert .= $row[$j];
                     } else {
                         // also double the escape string if found in the data
-                        if ('csv' == $what) {
+                        if ($csv_escaped != $csv_enclosed) {
                             $schema_insert .= $csv_enclosed
                                        . str_replace($csv_enclosed, $csv_escaped . $csv_enclosed, str_replace($csv_escaped, $csv_escaped . $csv_escaped, $row[$j]))
                                        . $csv_enclosed;
                         } else {
-                            // for excel, avoid a problem when a field contains
-                            // double quotes
+                            // avoid a problem when escape string equals enclose
                             $schema_insert .= $csv_enclosed
                                        . str_replace($csv_enclosed, $csv_escaped . $csv_enclosed, $row[$j])
                                        . $csv_enclosed;
